1.09-More-Services/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-pong-app-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong-app
  template:
    metadata:
      labels:
        app: ping-pong-app
    spec:
      containers:
        - name: ping-pong-app
          image: mickeckemi21/ping-pong-app:1.09
