1.09-More-Services/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ping-pong-app-svc
spec:
  type: ClusterIP
  selector:
    app: ping-pong-app
  ports:
    - port: 8686
      protocol: TCP
      targetPort: 8080
